# squad-manager-api

./: Dockerfile  Dockerfile-tests  README.md  docker-compose-tests.yaml  docker-compose.yaml  env-example  pyproject.toml
app/: config.py  main.py
app/api/: routers.py
app/api/v1/: dogs_endpoints.py  exams_endpoints.py  members_endpoints.py
app/core/: api_description.py  api_responses.py  config.py  database.py
app/db/: dev_engine.py
app/db/models/: core_models.py  enums.py
app/endpoints/: dogs_api.py  exams_api.py  members_api.py
app/helpers/: autogenerated_courses.py  check_existing_exams.py  create_uuid.py  filter_exams.py
app/models/: core_models.py  dogs.py  enums.py  members.py
app/routers/: dogs_api.py  members_api.py
app/schemas/: courses.py  dogs.py  exams.py  members.py
git_hooks/: commit-msg.py  pre-commit.py  prepare-commit-msg.py
tests/: conftest.py
tests/api/v1/: test_members_endpoints.py
