[tool.poetry]
name = "squad-manager-api"
version = "0.1.0"
description = ""
authors = ["Natalia Czapska <czapskanatalia@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
sqlmodel = "^0.0.8"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["email"], version = "^1.10.2"}
email-validator = "^1.3.0"
databases = "^0.6.1"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
requests = "^2.28.1"
pytest-asyncio = "^0.19.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
